tests/baselines/reference/generatorES6_2.errors.txt
tests/cases/compiler/generatorES6_2.ts(2,12): error TS9001: Generators are not currently supported.
tests/cases/compiler/generatorES6_2.ts(3,9): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/compiler/generatorES6_2.ts (2 errors) ====
    class C {
        public * foo() {
               ~
!!! error TS9001: Generators are not currently supported.
            yield 1
            ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
        }
    }